# GeneMiner2-UCE

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  README_EN.md  README_zh_cn.md  deny.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  fuzz-smoke.yml
docs/: 5.mito.md  assembler-algorithm_ZH.md  assembler_EN.md  assembler_ZH.md  filter_EN.md  filter_ZH.md  gene_EN.md  gene_ZH.md  mainfilter-performance.md  mitochondria_CN.md  mitochondria_EN.md  mitochondria_ZH.md  population_EN.md  population_ZH.md  profiling_EN.md  profiling_ZH.md  rad_CN.md  rad_EN.md  te_EN.md  te_ZH.md  uce-workflow_EN.md  uce-workflow_ZH.md
docs/development/: mainfilter-performance.md  rust-cli-migration.md  workflow-architecture.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fastx_parser.rs
manual/EN_US/: command_line.md  output.md
manual/ZH_CN/: command_line.md  output.md
rust/build_consensus/: Cargo.toml
rust/build_consensus/src/: main.rs
rust/geneminer2_cli/: Cargo.toml
rust/gm2_tools/: Cargo.toml  build.rs
rust/main_assembler/: Cargo.toml
rust/main_assembler_original/: Cargo.toml
rust/main_filter_new/: Cargo.toml  build.rs
rust/main_population/: Cargo.toml
rust/main_refilter_new/: Cargo.toml
rust/main_repeat/: Cargo.toml
scripts/: build_consensus.py  build_trimed.py  compare_population_pseudoref.py  gm2_stats.py  its2_profile.py  main_assembler.py  main_assembler_original.UPSTREAM.md  main_assembler_original.py  main_refilter_ext.py  main_refilter_new.py  render_scn_flow_pdf.py  render_scn_flow_png.py  summarize_compact21_uce.py  trace_original_assembler.py  unix_command.py
tests/: test_cleanup_intermediates.py  test_cli_smoke.py  test_data_integrity_fixes.py  test_gm2_stats.py  test_mito_workflow.py  test_population_real_tools.py  test_rad_workflow.py  test_reference_cache.py  test_refilter_ext.py  test_rust_build_consensus.py  test_rust_cli_migration.py  test_rust_main_assembler.py  test_rust_mainfilter.py  test_uce_acceptance_propagation.py  test_uce_backbone.py  test_uce_rescue_assembler_refs.py  test_uce_rescue_fallback.py  test_uce_rescue_parallelism.py  test_uce_scoring_guardrails.py  test_uce_simulated_integration.py  test_uce_terminal_rescue.py
(+51 files in other folders)
