[package]
name = "tstools-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
gm2_tools = { path = "../rust/gm2_tools" }

[[bin]]
name = "fastx_parser"
path = "fuzz_targets/fastx_parser.rs"
test = false
doc = false
bench = false
